--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,19 @@
   color: #61dafb;
 }
 
+.form {
+  display: block;
+  text-align: center;
+  font-size: 30px;
+  margin: auto;
+}
+input {
+  font-size: 30px;
+}
+select {
+  font-size: 30px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +48,95 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+header > img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+
+section {
+  background-color: antiquewhite;
+  margin: 5px;
+}
+section h1 {
+  font-size: 2.5rem;
+  color: orange;
+}
+section img {
+  height: 100px;
+}
+
+
+nav ul {
+  list-style: none;
+  text-align: center;
+  background-color: black;
+  color: white;
+  font-size: 3.5rem;
+  border-radius: 30px;
+  border: 5px solid white;
+
+
+
+}
+nav li {
+  display: inline-block;
+  margin: 10px;
+}
+nav li:hover {
+  background-color: rgba(140, 211, 255, 0.752);
+}
+
+.container {
+  display: flex;
+  justify-content: space-evenly;
+}
+.container > section {
+  border: 1px solid blue;
+  flex: 1;
+  text-align: center;
+  border-radius: 40px;
+  background-color: rgba(0, 103, 27, 0.365);
+}
+
+footer {
+  display: flex;
+  background-color: blanchedalmond;
+}
+
+footer div {
+  flex: 1;
+}
+
+.footer-logo {
+  width: 80px;
+  height: 100px;
+}
+
+footer p {
+  float: right;
+}
+
+.promotion {
+  border: 1px solid rosybrown;
+  border-radius: 40px;
+  padding: 20px;
+  background-color: rgb(0, 95, 76);
+}
+
+a {
+  text-decoration: none;
+}
+a:visited {
+  color: white;
 }
